--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,13 @@
 @tailwind utilities;
 
 body {
-    background-color: black;
+    background-image: url("https://images.unsplash.com/photo-1475274047050-1d0c0975c63e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=100");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: initial;
     height: 100%;
 }
 
 #root {
-    height: 100%;
+    height: 100vh;
 }
